Most of functionality

--- a/shared/style.css
+++ b/shared/style.css
@@ -16,7 +16,7 @@ body {
 	list-style: none;
 	text-align: right;
 	padding: 3ex 0 3ex 0;
-	text-shadow: -3px 0 #000000, 0 3px #000000
+	text-shadow: -3px 0 #000000, 0 3px #000000, 1px 0 #000000, 0 -1px #000000
 }
 
 .navigation > li {
@@ -50,8 +50,34 @@ body {
 	border-color: #000000;
 }
 
+.my_bookmarks {
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10%;
+    width: 40%;
+    height: 30%;
+    border-width: 1ex;
+    border-style: solid;
+    border-color: #000000;
+    background-color: #ffffff;
+    overflow: auto; /* Enable scroll if needed */
+}
+
+.my_input {
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10%;
+    width: 40%;
+    height: 30%;
+    border-width: 1ex;
+    border-style: solid;
+    border-color: #000000;
+    background-color: #ffffff;
+}
+
 .title_centre {
 	text-align: center;
+    text-shadow: -1px 0 #ffffff, 0 1px #ffffff, 1px 0 #ffffff, 0 -1px #ffffff;
 }
 
 /* The Modal (background) */
@@ -75,6 +101,13 @@ body {
     margin: 5% auto 15% auto;
     border: 1px solid #888;
     width: 15%;
+}
+
+.modal-my-content {
+    background-color: #fefefe;
+    margin: auto;
+    border: 1px solid #888;
+    width: 100%;
 }
 
 /* The Close Button (x) */
@@ -127,6 +160,15 @@ body {
     box-sizing: border-box;
 }
 
+.my_info {
+    width: 100%;
+    padding: 5px 5px;
+    margin: 8px, 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
 .action_button {
 	background-color: #4CAF50;
     color: white;
@@ -143,4 +185,12 @@ body {
 
 .error_it {
     color: red;
+}
+
+.hidden {
+    display: none;
+}
+
+.one_line {
+    display:inline-block;
 }
