Functionality complete. Need comments and error checking

--- a/shared/style.css
+++ b/shared/style.css
@@ -82,6 +82,10 @@ body.learn_city {
     font-weight: bold;
 }
 
+.highlight {
+    background-color: #73AD21;
+}
+
 .navigation {
 	color: #ffffff;
 	list-style: none;
