--- a/shared/style.css
+++ b/shared/style.css
@@ -13,9 +13,20 @@ body {
 
 body.learn_city { 
     font-family: arial, helvetica, sans-serif;
-    margin: 0;
+    margin: 0, 0, 0, 3ex;
     padding: 0;
     background-image: none;
+}
+
+body.assignment {
+    font-family: arial, helvetica, sans-serif;
+    margin: auto;
+    padding: auto;
+    background-image: none;
+}
+
+.assignment_parts {
+    padding: 1ex 3ex 3ex 3ex;
 }
 
 .learncity_title {
@@ -76,6 +87,7 @@ body.learn_city {
 
 .bulk {
     padding: 1ex 0 3ex 3ex;
+    margin: 3ex;
 }
 
 .important {
